@@ -28,6 +28,9 @@
 
 namespace WebCore {
 
+static const WORD bitmapType = 0x4d42; // BMP format
+static const WORD bitmapPixelsPerMeter = 2834; // 72 dpi
+
 DIBPixelData::DIBPixelData(HBITMAP bitmap)
 {
     initialize(bitmap);
@@ -44,5 +47,41 @@ void DIBPixelData::initialize(HBITMAP bitmap)
     m_bytesPerRow = bmpInfo.bmWidthBytes;
     m_bitsPerPixel = bmpInfo.bmBitsPixel;
 }
+
+#ifndef NDEBUG
+void DIBPixelData::writeToFile(LPCWSTR filePath)
+{
+    HANDLE hFile = ::CreateFile(filePath, GENERIC_WRITE, 0, 0, CREATE_ALWAYS, FILE_ATTRIBUTE_NORMAL, 0);
+    if (INVALID_HANDLE_VALUE == hFile)
+        return;
+
+    BITMAPFILEHEADER header;
+    header.bfType = bitmapType;
+    header.bfOffBits = sizeof(BITMAPFILEHEADER) + sizeof(BITMAPINFOHEADER);
+    header.bfReserved1 = 0;
+    header.bfReserved2 = 0;
+    header.bfSize = sizeof(BITMAPFILEHEADER);
+
+    BITMAPINFOHEADER info;
+    info.biSize = sizeof(BITMAPINFOHEADER);
+    info.biWidth = m_size.width();
+    info.biHeight = m_size.height();
+    info.biPlanes = 1;
+    info.biBitCount = m_bitsPerPixel;
+    info.biCompression = BI_RGB;
+    info.biSizeImage = bufferLength();
+    info.biXPelsPerMeter = bitmapPixelsPerMeter;
+    info.biYPelsPerMeter = bitmapPixelsPerMeter;
+    info.biClrUsed = 0;
+    info.biClrImportant = 0;
+
+    DWORD bytesWritten = 0;
+    ::WriteFile(hFile, &header, sizeof(header), &bytesWritten, 0);
+    ::WriteFile(hFile, &info, sizeof(info), &bytesWritten, 0);
+    ::WriteFile(hFile, buffer(), bufferLength(), &bytesWritten, 0);
+
+    ::CloseHandle(hFile);
+}
+#endif
 
 } // namespace WebCore
